# WinAPIWrapper

./: .gitignore  CMakeLists.txt  README.md  WinAPIWrapper.sln
CmakeBuild/: build.sh  configure.bat  run.bat  run.sh
WinAPIWrapper/: .clang-format  Application.cpp  CMakeLists.txt  Resource.h  WinAPIWrapper.vcxproj  WinAPIWrapper.vcxproj.filters
WinAPIWrapper/header/: WinAPIWrapper.h
WinAPIWrapper/src/: Application.cpp  Brush.cpp  Brush.h  CMakeLists.txt  Circle.cpp  Circle.h  Color.cpp  Color.h  Figures.cpp  Figures.h  Line.cpp  Line.h  Pen.cpp  Pen.h  Point.cpp  Point.h  Rect.cpp  Rect.h  Styles.h  Triangle.cpp  Triangle.h  WinAPIWrapper.h  Window.cpp  Window.h
examples/: Application.cpp  CMakeLists.txt
include/: WinAPIWrapper.h
src/: Brush.cpp  Brush.h  CMakeLists.txt  Circle.cpp  Circle.h  Color.cpp  Color.h  Figures.h  Line.cpp  Line.h  Pen.cpp  Pen.h  Rect.cpp  Rect.h  Resource.h  Triangle.cpp  Triangle.h  Window.cpp  Window.h
